Fix Agency theme login page footer spacing

--- a/themes/agency/assets/css/mediaqueries.css
+++ b/themes/agency/assets/css/mediaqueries.css
@@ -310,7 +310,7 @@
 		padding-top: 65px;
 	}
 	.page:last-child {
-		padding-bottom: 50px;
+		padding-bottom: 70px;
 	}
 
 	#projects {
